--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <h3>Flowers House</h3>
                 <h2>芮塔花室</h2>
             </header>
-            <figure><img src="/images/banner.png" alt="一些花"></figure>
-            <video src="/images/flower.mp4" autoplay muted loop></video>
+            <figure><img src="images/banner.png" alt="一些花"></figure>
+            <video src="images/flower.mp4" autoplay muted loop></video>
         </div>
         <section id="news" class="lightblue">
             <!-- 區塊標籤 -->
@@ -48,7 +48,7 @@
             <div class="box_list">
                 <!-- 列表1 -->
                 <article class="smoove" data-move-x="-500px" data-rotate="90deg">
-                    <figure><img src="/images/pt_news1.jpg" alt=""></figure>
+                    <figure><img src="images/pt_news1.jpg" alt=""></figure>
                     <h2>NEW TITLE</h2>
                     <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab reprehenderit, nisi
                             magnam placeat quasi aperiam odit excepturi voluptatem illo accusantium voluptatum iusto
@@ -56,7 +56,7 @@
                 </article>
                 <!-- 列表2 -->
                 <article class="smoove" data-move-y="500px">
-                    <figure><img src="/images/pt_news2.jpg" alt=""></figure>
+                    <figure><img src="images/pt_news2.jpg" alt=""></figure>
                     <h2>NEW TITLE</h2>
                     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa reiciendis facilis
                             error sequi, nemo excepturi distinctio voluptas, molestiae rem iste, mollitia eaque tempore.
@@ -71,7 +71,7 @@
                 </article>
                 <!-- 列表3 -->
                 <article class="smoove" data-move-x="500px" data-rotate="-90deg">
-                    <figure><img src="/images/pt_news3.jpg" alt=""></figure>
+                    <figure><img src="images/pt_news3.jpg" alt=""></figure>
                     <h2>NEW TITLE</h2>
                     <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vero aperiam
                             error beatae illo similique id ipsam qui nemo magnam, praesentium quasi, magni voluptates
@@ -187,7 +187,7 @@
         <section id="video" class="lightgreen">
             <h2 class="title">VIDEO</h2>
             <div>
-                <video src="/images/Planter.mp4" controls loop poster="/images/video.jpg"></video>
+                <video src="images/Planter.mp4" controls loop poster="/images/video.jpg"></video>
             </div>
         </section>
         <section id="contact">
