--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <section id="video" class="lightgreen">
             <h2 class="title">VIDEO</h2>
             <div>
-                <video src="images/Planter.mp4" controls loop poster="/images/video.jpg"></video>
+                <video src="images/Planter.mp4" controls loop poster="images/video.jpg"></video>
             </div>
         </section>
         <section id="contact">
