--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>芮塔花室</title>
+    <title>瑋瑋花室</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/all.min.css">
     <!-- 自己寫的css要放最下面，全眾才會最重 -->
@@ -36,7 +36,7 @@
         <div id="banner">
             <header>
                 <h3>Flowers House</h3>
-                <h2>芮塔花室</h2>
+                <h2>瑋瑋花室</h2>
             </header>
             <figure><img src="images/banner.png" alt="一些花"></figure>
             <video src="images/flower.mp4" autoplay muted loop></video>
