--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!-- 列表1 -->
                 <article class="smoove" data-move-x="-500px" data-rotate="90deg">
                     <figure><img src="images/pt_news1.jpg" alt=""></figure>
-                    <h2>NEW TITLE</h2>
+                    <h2>最新消息</h2>
                     <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab reprehenderit, nisi
                             magnam placeat quasi aperiam odit excepturi voluptatem illo accusantium voluptatum iusto
                             culpa! Eligendi nulla quos assumenda ex earum iure!</a></p>
@@ -57,7 +57,7 @@
                 <!-- 列表2 -->
                 <article class="smoove" data-move-y="500px">
                     <figure><img src="images/pt_news2.jpg" alt=""></figure>
-                    <h2>NEW TITLE</h2>
+                    <h2>最新活動</h2>
                     <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa reiciendis facilis
                             error sequi, nemo excepturi distinctio voluptas, molestiae rem iste, mollitia eaque tempore.
                             Officiis, corporis? Consectetur id excepturi temporibus doloribus ipsa soluta dolores!
@@ -72,7 +72,7 @@
                 <!-- 列表3 -->
                 <article class="smoove" data-move-x="500px" data-rotate="-90deg">
                     <figure><img src="images/pt_news3.jpg" alt=""></figure>
-                    <h2>NEW TITLE</h2>
+                    <h2>最新品項</h2>
                     <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis vero aperiam
                             error beatae illo similique id ipsam qui nemo magnam, praesentium quasi, magni voluptates
                             temporibus reprehenderit. Commodi non, cum porro unde error, sit vel impedit doloribus
@@ -91,7 +91,7 @@
                 <!-- div.item$*4>div>h2{SERVICE TITLE}+p>a[href='#'] -->
                 <div class="item1 smoove">
                     <div class="text">
-                        <h2>SERVICE TITLE</h2>
+                        <h2>多家分店</h2>
                         <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate deserunt
                                 aspernatur corrupti! Quibusdam inventore quod reiciendis unde molestiae. Laudantium
                                 dicta aspernatur facilis illum architecto libero porro incidunt cumque corporis
@@ -100,7 +100,7 @@
                 </div>
                 <div class="item2 smoove">
                     <div class="text">
-                        <h2>SERVICE TITLE</h2>
+                        <h2>外送服務</h2>
                         <p><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem voluptate saepe
                                 reprehenderit eos, officia a totam, placeat ab, beatae fugit suscipit facere eius odio
                                 sunt aliquam impedit fuga corrupti magnam.</a></p>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="item3 smoove">
                     <div class="text">
-                        <h2>SERVICE TITLE</h2>
+                        <h2>婚慶布置</h2>
                         <p><a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem unde labore fuga
                                 deleniti. Qui repudiandae pariatur nemo sint enim in iste. Explicabo numquam ipsam ullam
                                 ducimus rem consequatur? Amet, quos!</a></p>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="item4 smoove">
                     <div class="text">
-                        <h2>SERVICE TITLE</h2>
+                        <h2>花藝設計課程</h2>
                         <p><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet facere ea eveniet
                                 esse dolore eum consequuntur recusandae dicta magnam non alias illum ullam nihil
                                 laboriosam, rerum fuga doloremque earum! Velit.</a></p>
